NO-JIRA | fix: replace inspection not_found state with not_started
